--- a/projects/first-full-stack/client/package.json
+++ b/projects/first-full-stack/client/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "axios": "^0.16.2",
     "react": "^15.6.1",
+    "react-bootstrap": "^0.31.3",
+    "react-burger-menu": "^2.1.6",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
+    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13",
     "redux": "^3.7.2",
